# rover

./: .gitignore  CHANGELOG.md  README.md  go.mod
.devcontainer/passthrough/: devcontainer.json
.devcontainer/roverctl/: Dockerfile  devcontainer.json
.devcontainer/roverctl-web/: Dockerfile  devcontainer.json
.devcontainer/roverd/: Dockerfile  devcontainer.json
.github/workflows/: build-and-upload.yaml
docs/: 01-overview.md  03-maintainers.md  03-roverctl-usage.md
docs/02-roverd/: 01-overview.md  02-conventions.md
docs/03-roverctl/: 01-overview.md  02-installation.md  03-usage.md
manage/: old-stop.sh  rovers.txt  status.sh
manage/test/: all.sh  build.sh  group-build.sh  group-install.sh  group-run.sh  group-stop.sh  group-update.sh  install.sh  run.sh  use.md
passthrough/: Dockerfile  Makefile  README.md  docker-compose.yaml  go.mod  go.sum
passthrough/.devcontainer/: devcontainer.json
passthrough/src/: main.go
passthrough1/: .gitignore  CHANGELOG.md  index.html
roverctl/: .gitignore  CHANGELOG.md  Makefile  README.md  go.mod  go.sum  install.sh
roverctl-web/: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  package-lock.json  package.json  tailwind.config.ts  theme.ts  vite.config.ts
roverctl-web/src/: app.html  app.postcss
roverctl/src/: main.go
roverctl/test-ser/: service.yaml
roverctl/views/: first_open.go  info.go  services_init.go  services_overview.go  services_sync.go  services_sync_instructions.go  shutdown.go  template.go  utils.go
roverd/: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md
roverd/openapi/: README.md
roverd/rover-bootspec/: Cargo.toml
roverd/rover-bootspec/src/: lib.rs
roverd/rover-constants/: Cargo.toml
roverd/rover-local/: Cargo.toml
roverd/rover-local/example-pipelines/: actuator.yaml  controller.yaml
roverd/rover-local/src/: main.rs
roverd/rover-types/: Cargo.toml
roverd/rover-types/src/: error.rs  service.rs
roverd/rover-validate/: Cargo.toml
roverd/roverd/: .gitignore  Cargo.toml  Makefile
roverd/roverd/example-pipelines/valid/actuator/: service.yaml
roverd/roverd/example-pipelines/valid/controller/: service.yaml
roverd/roverd/example-pipelines/valid_alias/funny/: service.yaml
roverd/roverd/src/: command.rs  constants.rs  error.rs  main.rs  test.rs
roverd/roverd/src/apis/: health.rs  pipeline.rs  services.rs
roverd/roverd/src/app/: bootspec.rs  daemons.rs  info.rs  mod.rs  process.rs  service.rs
roverd/roverd/src/util/: mod.rs
(+202 files in other folders)
