[package]
name = "rover-types"
version = "0.1.0"
edition = "2024"

[dependencies]
rover-validate = { version = "0.1.0", path = "../rover-validate" }
rover-constants = { version = "0.1.0", path = "../rover-constants" }
openapi = { path = "../openapi", features = ["server"] }
serde_yaml = "0.9.34"
anyhow = "1.0.98"

serde_json = "1.0.140"
derive_more = "0.99.18"
reqwest = { version = "0.12.9", features = [
    "multipart",
    "stream",
    "json",
    "native-tls-vendored",
] }
tokio = { version = "1.41.0", features = ["full"] }
zip = "0.6.6"
axum = "0.7.7"
axum-extra = "0.9.4"
